# pretty-good-sum

./: .gitignore  CMakeLists.txt  README.md  logical.hpp  pgs.cpp  recursive_union.hpp  sum.hpp  type_traits.hpp
bash/: common.bash  common.sh  run_cmake.sh  run_cpp.sh
cmake/: PgsConfigVersion.cmake.in  msvc_flags.cmake
cmake/Modules/: FindBde.cmake  FindGoogleTest.cmake  FindPackageFinder.cmake  FindQdla.cmake  FindQfdArtifacts.cmake  FindRobo.cmake
doxygen/: Doxyfile.in
misc/docs/2016-03-18-pgs-intro/: attendees.rst  intro.pptx  pres.pptx  ~$intro.pptx
src/: logical.hpp  pgs.cpp  recursive_union.hpp  recursive_wrapper.hpp  sum.hpp  sum_type.hpp  type_traits.hpp
src/pgs/: logical.hpp  pgs.hpp  recursive_union.hpp  recursive_wrapper.hpp  sum_type.hpp  type_traits.hpp
tests/: CMakeLists.txt  array.t.cpp  breathing.t.cpp  cdt  cdt.cpp  copy.t.cpp  explicit.cpp  expression.t.cpp  fibonacci.t.cpp  get.t.cpp  list.t.cpp  main.t.cpp  match.t.cpp  move.t.cpp  option.t.cpp  pgs.t.cpp  sexpr.t.cpp  simple  simple.cpp  tree.t.cpp
